# Nexus

./: .env.example  .gitattributes  .gitignore  CAPABILITIES.md  CAPABILITIES_ZH.md  CLAUDE.md  DEMO_SCRIPT.md  Dockerfile  LICENSE  PROJECT_STATEMENT.md  README.md  TODO.md  deploy.sh  docker-compose.codespace.yml  docker-compose.yml  docker-entrypoint.sh  index.html  nexus_mcp_server.py  plan.md  pyproject.toml  start-codespace.sh  v4_measurement_uncertainty_propagation.md  v5_real_experimental_case_studies.md  visualization_v3_addendum.md
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.github/workflows/: auto-merge.yml  claude-issue.yml  claude-review.yml  claude.yml  deploy-landing-page.yml
assets/: index-D6D3VIBc.css  index-DTqDhx3c.js
docs/: USER_GUIDE_EN.md  USER_GUIDE_ZH.md  UX_PAIN_POINTS_LITERATURE_REVIEW.md
nexus-landing-page/: index.html  package.json  vite.config.ts
nexus-landing-page/src/: App.tsx  index.css
optimization_copilot/: __init__.py  agent.py  cli.py  config.py  usage.py
optimization_copilot/_analysis/: __init__.py  shap_values.py
tests/: test_ablation.py  test_acceptance.py  test_acceptance_benchmarks.py  test_adversarial_robustness.py  test_agents_base.py  test_anomaly_gp.py  test_anomaly_handler.py  test_anomaly_kpi.py  test_anomaly_signal.py  test_api.py  test_api_analysis.py  test_api_loop.py  test_auth.py  test_batch_enhancements.py  test_benchmark_functions.py  test_benchmark_generator.py  test_benchmark_protocol.py  test_benchmark_verification.py  test_campaign_loop.py  test_campaign_manager.py  test_campaign_report.py  test_campaign_runner.py  test_campaign_stage_gate_output.py  test_campaign_surrogate_ranker.py  test_candidate_pool.py  test_case_study_base.py  test_case_study_catalysis.py  test_case_study_perovskite.py  test_case_study_zinc.py  test_causal.py  test_causal_metrics.py  test_causal_optimizer_integration.py  test_causal_validation.py  test_cli_app.py  test_community_benchmarks.py  test_compliance.py  test_composer.py  test_composer_templates.py  test_confounder.py  test_constraints.py  (+119 more)
(+408 files in other folders)
