[project]
name = "optimization-copilot"
version = "0.3.0"
description = "Optimization Copilot — Intelligent Experiment Decision Platform"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.42.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[project.scripts]
copilot = "optimization_copilot.cli_app.main:cli"

[tool.ruff]
line-length = 100
target-version = "py310"
